--- a/public/style.css
+++ b/public/style.css
@@ -20,7 +20,7 @@ button {
     bottom: 20px;
     right: 50%;
     transform: translateX(50%);
-    
+
     
 }
 
@@ -28,17 +28,58 @@ div {
     margin-bottom: /*20px */ 2px;
 }
 
-#hexagramsContainer {
+h1 {
     display: flex;
-    justify-content: space-around;
-    align-items: start;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
+#hexagramsContainer {
+    display: flex;
+    flex-wrap: wrap; /* Allows items to wrap in smaller screens */
+    justify-content: space-around;
+    gap: 20px; /* Adds some space between the hexagrams */
+}
+
+.hexagram {
+    flex-basis: calc(50% - 20px); /* Adjust the size minus the gap */
+    min-height: 400px; /* Set a minimum height */
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    padding: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Optional: adds some shadow for depth */
+    
+    transition: opacity 0.5s ease-in-out;
+    opacity: 0;
+}
+
+@media (max-width: 768px) {
+    .hexagram {
+        flex-basis: 100%; /* Full width on smaller screens */
+    }
+}
+/*
 .originalHexagram {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
+}
+
+.transformedHexagram {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+*/
+
+#originalText, #transformedText {
+    width: 80%;
+
 }
 
 .line-svg:hover {
@@ -57,15 +98,25 @@ div {
     display: block; 
 }
 
-.tooltip {
-    position: absolute;
-    bottom: 100%; /* Show above the line */
-    left: 0;
-    background-color: #f9f9f9;
-    border: 1px solid #d1d1d1;
-    padding: 5px;
-    visibility: hidden; /* Initially hidden */
+.svgContainer {
+    position: relative;
 }
+
+.tooltip {
+    position: relative;
+    z-index: 10;
+    bottom: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #fff;
+    border: 1px solid #ddd;
+    padding: 5px;
+    border-radius: 4px;
+    visibility: hidden; /* Start hidden, shown on hover */
+    z-index: 10; /* Ensure it's above other content */
+    white-space: pre-wrap; /* Respect the formatting of the text, including new lines */
+}
+
 
 .line-svg:hover .tooltip {
     visibility: visible; /* Show on hover */
